# mini-trading-engine

./: .gitignore  CMakeLists.txt  README.md  RUNNING.md  structure.txt  trading.db
api/: CMakeLists.txt
api/include/: Positions.hpp
api/src/: Positions.cpp  api_main.cpp  rest_server.cpp
dashboard/: package-lock.json  package.json  tailwind.config.cjs  tailwind.config.js
dashboard/src/: App.tsx  index.css
dashboard/src/components/: CandleChart.tsx  CandlestickChart.tsx  OrderBookDepth.tsx  OrderEntry.tsx  PositionsPanel.tsx  PriceSpark.tsx  SymbolSelector.tsx  TickerSelect.tsx  TopOfBook.tsx  TradesTape.tsx
dashboard/src/hooks/: useMarketSocket.tsx
engine/: CMakeLists.txt
engine/include/: DBLogger.hpp  MarketDataServer.hpp  Order.hpp  OrderBook.hpp  OrderBookManager.hpp
engine/src/: DBLogger.cpp  MarketDataServer.cpp  OrderBook.cpp  OrderBookManager.cpp  engine_main.cpp
engine/test/: test_orderbook.cpp
replay/: CMakeLists.txt
replay/src/: replay_main.cpp
scripts/: candles_30min.txt  sample_orders.txt  test6.txt  test_make_trades.sh
tools/: marketdata_server.js  package.json
